--- a/Areas/User/Views/UserHome/HistoryTicket.cshtml
+++ b/Areas/User/Views/UserHome/HistoryTicket.cshtml
@@ -104,7 +104,7 @@
                             Góc Điện Ảnh
                             <i class="ti-angle-down down-btn"></i>
                             <ul class="sub-list-gr-1 list-group">
-                                <li><a href="#">Thể loại phim</a></li>
+                                <li><a href="/User/BookTicket/MovieType">Thể loại phim</a></li>
                                 <li><a href="#">Diễn viên</a></li>
                                 <li><a href="#">Đạo diễn</a></li>
                                 <li><a href="#">Bình luận phim</a></li>
