Xong trang MovieType

--- a/Areas/User/Views/BookTicket/MovieDetail.cshtml
+++ b/Areas/User/Views/BookTicket/MovieDetail.cshtml
@@ -264,7 +264,7 @@
                                     <div class="col-md-2 d">Thể loại:</div>
                                     <div class="col-md-3 type">
                                         <button type="button" class="btn">
-                                            <a href="" class="list-item">@ViewBag.movieItem.movie_type.movie_type1</a>
+                                            <a href="/User/BookTicket/MovieType/@ViewBag.movieItem.movie_type.id" class="list-item">@ViewBag.movieItem.movie_type.movie_type1</a>
                                         </button>
                                     </div>
                                 </div>
