--- a/Areas/User/assets/css/movietype.css
+++ b/Areas/User/assets/css/movietype.css
@@ -306,9 +306,9 @@
     font-family: Nunito Sans, sans-serif;
 }
 
-.movie-list {
+/*.movie-list {
     margin-top: 32px;
-}
+}*/
 
 .post-list {
     list-style: none;
